--- a/ajaxapp/index.html
+++ b/ajaxapp/index.html
@@ -8,6 +8,10 @@
 <body>
   <h2>GitHub User Info</h2>
   <button onclick="fetchUserInfo('js-primer-example');">Get user info</button>
+  <!-- 整形したHTMLの挿入先 -->
+  <div id="result"></div>
   <script src="index.js"></script>
 </body>
 </html>
+
+
