--- a/todoapp/index.html
+++ b/todoapp/index.html
@@ -4,9 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo App</title>
+  <!-- cssdファイルの読み込み -->
+  <link rel="stylesheet" href="https://jsprimer.net/use-case/todoapp/final/final/index.css">
 </head>
 <body>
-  <h1>Todo App</h1>
+  <!-- class属性をCSSのために指定 -->
+  <div class="todoapp">
+    <form id="js-form">
+      <input
+        id="js-form-input"
+        class="new-todo"
+        type="text"
+        placeholder="What need to be done?"
+        autocomplete="off"
+      />
+    </form>
+    <!-- TodoアプリのメインとなるTodoリスト -->
+    <div id="js-todo-list" class="todo-list">
+      <!-- 動的に更新されるTodoリスト -->
+    </div>
+    <footer class="footer">
+      <!-- Todoアイテム数の表示 -->
+      <span id="js-todo-count">
+        Todoアイテム数: 0
+      </span>
+    </footer>
+  </div>
   <script type="module" src="index.js"></script>
 </body>
 </html>
