--- a/todoapp/index.html
+++ b/todoapp/index.html
@@ -30,7 +30,7 @@
       </span>
     </footer>
   </div>
-  <!-- <script type="module" src="index.js"></script> -->
-  <script type="module" src="./test/test.js"></script>
+  <script type="module" src="index.js"></script>
+  <!-- <script type="module" src="./test/test.js"></script> -->
 </body>
 </html>
